--- a/src/body.jade
+++ b/src/body.jade
@@ -9,7 +9,7 @@ a(href='https://github.com/applicaster/siren-broswer')
         span.icon-bar
         span.icon-bar
         span.icon-bar
-      a.navbar-brand(href='#') Siren API Browser
+      a.navbar-brand(href='#') Hello
 .container(style="padding-top:60px;")
   .row
     .col-md-12
